# dev_tools

./: .gitignore  README.md
django_project/: Makefile  pyproject.toml  settings.py  urls.py
other_project/: Makefile  pyproject.toml
