[tool.poetry]
name = "package-name"
version = "0.1.0"
description = ""
authors = [
    "Author Name <author@example.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-jet-reboot = "^1.3.9"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
easy-thumbnails = "^2.10"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
djlint = "^1.34.2"
mypy = "^1.11.2"
pylint = "^3.2.6"
tqdm = "^4.67.1"
djlint = "^1.36.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
faker = "^28.0.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-django = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79
max-complexity = 6
count = true
per-file-ignores = [
    "__init__.py:F401,F403",
    "**/settings.py:E501"
]
extend-ignore = [
    "E203",
    "E231",
    "E241",
    "W503",
    "F811",
    "R503",
    "R504",
    "R505"
]
exclude = [
    ".git/",
    "__pycache__/",
    "**/migrations/",
    "manage.py",
    "settings.py",
    "env/",
    "venv/",
    ".env/",
    ".venv/",
    "tests/",
    ".pytest_cache",
    ".vscode/",
    ".idea/"
]

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | __pycache__
  | \.pytest_cache
  | \.vscode
  | \.idea
  | venv
  | env
  | \.venv
  | \.env
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_local_folder = [
    "yourFolder",
]

[tool.mypy]
python_version = ">=3.11"
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["import-untyped"]
exclude = [
    "^settings\\.py$",
    '*\.pyi$',
    '**/.venv/',
    '**/venv/',
    '**/.env/',
    '**/env/',
]

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "yourProject.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = """
    --cov=yourFolder1
    --cov=yourFolder2
    --cov=yourFolderN
    --cov-report=html
    --cov-report=term-missing
"""
norecursedirs = ["venv", ".venv", "__pycache__", "static", "media"]
